fix(docs): No line breaks in code, resolves #151

--- a/src/components/docs-component/_docs-content.scss
+++ b/src/components/docs-component/_docs-content.scss
@@ -269,7 +269,6 @@
     }
 
     span {
-      white-space: nowrap;
       display: inline;
     }
 
